<resources>
    <string name="app_name">Hello Universe</string>
    <string name="action_settings">Settings</string>

    <string name="edit_galaxy">Edit Galaxy Info</string>

    <string name="hello_world">Galaxy Information Screen</string>
    <string name="galaxy_name">Galaxy Name:</string>
    <string name="galaxy_solar">Galaxy Solar Systems:</string>
    <string name="galaxy_habit">Galaxy Habitable Planets:</string>
    <string name="galaxy_colony">Galaxy Colonies:</string>
    <string name="galaxy_pop">Galaxy Population:</string>
    <string name="galaxy_fleet">Galaxy Starship Fleets:</string>
    <string name="galaxy_ships">Galaxy Active Starships:</string>

    <string name="galaxy_name_data">A galaxy</string>
    <string name="galaxy_solar_data">0</string>
    <string name="galaxy_habit_data">0</string>
    <string name="galaxy_colony_data">0</string>
    <string name="galaxy_pop_data">0</string>
    <string name="galaxy_fleet_data">0</string>
    <string name="galaxy_ships_data">0</string>

    <string name="ok_button">OK</string>
    <string name="hint_colony">Enter number of colonies</string>
    <string name="hint_pop">Enter galaxy population</string>
    <string name="hint_fleet">Enter number of fleets</string>
    <string name="hint_ships">Enter number of starships</string>

    <string name="galaxy_one">Lenin Galaxy</string>
    <string name="galaxy_two">Trotsky Galaxy</string>
    <string name="galaxy_three">Stalin Galaxy</string>
</resources>
